temp/d82of83input.txt
./temp/i01ofp0.cpp:1:1: error: expected unqualified-id before 'public'
 public class HelloWorld {
 ^~~~~~
